<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintNewsFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MesaMobile">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/CustomTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/filtrate_news"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutNewsDate"
            style="@style/CustomInputLayout"
            android:hint="@string/published_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textInputDate"
                android:textColorHint="@drawable/selector_hint_color"
                android:hint="@string/default_date_format"
                android:inputType="phone"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFilter"
            style="@style/Theme.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/filtrate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonClearFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLayoutNewsDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClearFilter"
            style="@style/Theme.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonFilter"
            app:layout_constraintTop_toBottomOf="@id/textLayoutNewsDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
