<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="news"
            type="br.com.loboneto.mesamobile.data.dao.News" />
    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/cardViewFavorite"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="25dp"
                    android:id="@+id/imageViewFavorite"
                    android:src="@drawable/ic_favorite_outline"
                    android:layout_gravity="center"
                    android:layout_height="25dp" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/imageViewNews"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintDimensionRatio="21:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNewsTitle"
                style="@style/CustomTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{news.newsData.title}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewNews"
                tools:text="@string/news_title" />

            <TextView
                android:id="@+id/textViewNewsDescription"
                style="@style/CustomSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{news.newsData.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewsTitle"
                tools:text="@string/news_description" />

            <TextView
                android:id="@+id/textViewNewsAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{news.newsData.author}"
                app:layout_constraintEnd_toStartOf="@id/textViewNewsDate"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewsDescription"
                tools:text="@string/news_author" />

            <TextView
                android:id="@+id/textViewNewsDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@{news.newsData.date()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/textViewNewsAuthor"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewsDescription"
                tools:text="@string/news_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>