<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="news"
            type="br.com.loboneto.mesamobile.data.domain.dao.news.NewsData" />
    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewNewsTitle"
                style="@style/CustomTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{news.title}"
                app:layout_constraintEnd_toStartOf="@id/cardViewNewsImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/news_title" />

            <TextView
                android:id="@+id/textViewNewsDescription"
                style="@style/CustomSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{news.description}"
                app:layout_constraintEnd_toStartOf="@id/cardViewNewsImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewsTitle"
                tools:text="@string/news_description" />

            <TextView
                android:id="@+id/textViewNewsAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{news.author}"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toStartOf="@id/textViewNewsDate"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewsDescription"
                tools:text="@string/news_author" />

            <TextView
                android:id="@+id/textViewNewsDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                app:layout_constraintVertical_weight="1"
                android:gravity="end"
                android:maxLines="1"
                android:text="@{news.date()}"
                app:layout_constraintEnd_toStartOf="@id/cardViewNewsImage"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/textViewNewsAuthor"
                app:layout_constraintTop_toBottomOf="@+id/textViewNewsDescription"
                tools:text="@string/news_date" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="60dp"
                android:id="@+id/cardViewNewsImage"
                android:layout_height="0dp"
                app:cardCornerRadius="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewNews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
